   commands.  (#245, Jelmer Vernooĳ)

 * Fix ``apply_delta`` to raise ``ApplyDeltaError`` instead of ``AssertionError``
   when the source buffer size doesn't match the delta header. This issue only
   affected the pure Python implementation when the Rust extension was not
   available. The Rust implementation already raised the correct exception.
   (#1606, Jelmer Vernooĳ)

0.23.0	2025-06-21

 * Add basic ``rebase`` subcommand. (Jelmer Vernooĳ)

 * Add ``gc`` command to ``dulwich.porcelain.`` (Jelmer Vernooĳ, #92)

 * Add ``unpack-objects`` plumbing command to unpack objects from pack files
   into loose objects in the repository. This command extracts all objects
   from a pack file and writes them to the object store as individual files.
   Available in both ``dulwich.porcelain.unpack_objects()`` and as a CLI
   command ``dulwich unpack-objects``. (Jelmer Vernooĳ)

 * Add ``merge-tree`` plumbing command to ``dulwich.porcelain`` and CLI.
   This command performs three-way tree merges without touching the working
   directory or creating commits, similar to ``git merge-tree``. It outputs
   the merged tree SHA and lists any conflicted paths. (Jelmer Vernooĳ)

 * Add ``porcelain.count_objects()`` function to count unpacked objects and
   their disk usage. Returns a tuple of (count, size) for simple usage or
   a ``CountObjectsResult`` dataclass with detailed statistics when
   ``verbose=True``. (Jelmer Vernooĳ)

 * Add support for pack index format version 3. This format supports variable
   hash sizes to enable future SHA-256 support. The implementation includes
   reading and writing v3 indexes with proper hash algorithm identification
   (1 for SHA-1, 2 for SHA-256). Note that SHA-256 support itself is not yet
   implemented and will raise NotImplementedError. (Jelmer Vernooĳ)

 * Fix ``LocalGitClient`` assertion error when fetching externally cloned repositories
   into ``MemoryRepo``. Previously, the client would fail with an AssertionError